{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 62,
  "lineage": "ce02b567-78be-9a4e-a60d-d0b740c4eb93",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:605427169049:instance/i-02bca884f3202038d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02bca884f3202038d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ca886cc679fbcef2",
            "private_dns": "ip-10-0-1-164.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.164",
            "public_ip": "44.203.7.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c260bb27125cffc4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed23272e294d9316",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-058945626b1ddb887"
            ]
          },
          "dependencies": [
            "aws_security_group.webserver-sg",
            "aws_subnet.web-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:internet-gateway/igw-01a8ba5439385c994",
            "id": "igw-01a8ba5439385c994",
            "owner_id": "605427169049",
            "tags": {
              "Name": "Demo IGW"
            },
            "tags_all": {
              "Name": "Demo IGW"
            },
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:605427169049:loadbalancer/app/External-LB/a7741ef57db5b608",
            "arn_suffix": "app/External-LB/a7741ef57db5b608",
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-1330143368.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:605427169049:loadbalancer/app/External-LB/a7741ef57db5b608",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "security_groups": [
              "sg-0eaeb1cf0cbb06d1a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-064bc30440acf070a"
              },
              {
                "subnet_id": "subnet-0ed23272e294d9316"
              }
            ],
            "subnets": [
              "subnet-064bc30440acf070a",
              "subnet-0ed23272e294d9316"
            ],
            "vpc_id": "vpc-0ab4290f3eb182b1f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_subnet.web-subnet-1",
            "aws_subnet.web-subnet-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:605427169049:listener/app/External-LB/a7741ef57db5b608/b5754f3eb9b4fa1b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:605427169049:targetgroup/ALB-TG/8df184df3642e7cd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:605427169049:listener/app/External-LB/a7741ef57db5b608/b5754f3eb9b4fa1b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:605427169049:loadbalancer/app/External-LB/a7741ef57db5b608",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-elb",
            "aws_lb_target_group.external-elb",
            "aws_security_group.web-sg",
            "aws_subnet.web-subnet-1",
            "aws_subnet.web-subnet-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:605427169049:targetgroup/ALB-TG/8df184df3642e7cd",
            "arn_suffix": "targetgroup/ALB-TG/8df184df3642e7cd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:605427169049:targetgroup/ALB-TG/8df184df3642e7cd",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:605427169049:targetgroup/ALB-TG/8df184df3642e7cd-20220713192057840400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:605427169049:targetgroup/ALB-TG/8df184df3642e7cd",
            "target_id": "i-02bca884f3202038d"
          },
          "dependencies": [
            "aws_instance.webserver1",
            "aws_lb_target_group.external-elb",
            "aws_security_group.webserver-sg",
            "aws_subnet.web-subnet-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:route-table/rtb-0f6fcbb45d6b57e72",
            "id": "rtb-0f6fcbb45d6b57e72",
            "owner_id": "605427169049",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a8ba5439385c994",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WebRT"
            },
            "tags_all": {
              "Name": "WebRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02dc3f09957f899c6",
            "route_table_id": "rtb-0f6fcbb45d6b57e72",
            "subnet_id": "subnet-0ed23272e294d9316"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-rt",
            "aws_subnet.web-subnet-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c8842a97c2fb4eb",
            "route_table_id": "rtb-0f6fcbb45d6b57e72",
            "subnet_id": "subnet-064bc30440acf070a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-rt",
            "aws_subnet.web-subnet-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:security-group/sg-0b82f030212a0a273",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0b82f030212a0a273",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058945626b1ddb887"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database-SG",
            "name_prefix": "",
            "owner_id": "605427169049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database-SG"
            },
            "tags_all": {
              "Name": "Database-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:security-group/sg-0eaeb1cf0cbb06d1a",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaeb1cf0cbb06d1a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web-SG",
            "name_prefix": "",
            "owner_id": "605427169049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "tags_all": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:security-group/sg-058945626b1ddb887",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058945626b1ddb887",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from web layer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eaeb1cf0cbb06d1a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Webserver-SG",
            "name_prefix": "",
            "owner_id": "605427169049",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver-SG"
            },
            "tags_all": {
              "Name": "Webserver-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:subnet/subnet-0f8c70ecc349a46ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8c70ecc349a46ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605427169049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1a"
            },
            "tags_all": {
              "Name": "Application-1a"
            },
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:subnet/subnet-0fc1d06d83af5e709",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc1d06d83af5e709",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605427169049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-2b"
            },
            "tags_all": {
              "Name": "Application-2b"
            },
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:subnet/subnet-0a6bf01c8d4bf91ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6bf01c8d4bf91ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605427169049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database"
            },
            "tags_all": {
              "Name": "Database"
            },
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:subnet/subnet-07d528a56abd68a87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d528a56abd68a87",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605427169049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-1a"
            },
            "tags_all": {
              "Name": "Database-1a"
            },
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:subnet/subnet-05a3d260dde017900",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05a3d260dde017900",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605427169049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-2b"
            },
            "tags_all": {
              "Name": "Database-2b"
            },
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:subnet/subnet-0ed23272e294d9316",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed23272e294d9316",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605427169049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-1a"
            },
            "tags_all": {
              "Name": "Web-1a"
            },
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:subnet/subnet-064bc30440acf070a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064bc30440acf070a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605427169049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-2b"
            },
            "tags_all": {
              "Name": "Web-2b"
            },
            "vpc_id": "vpc-0ab4290f3eb182b1f"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:605427169049:vpc/vpc-0ab4290f3eb182b1f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d5d4bfb87f36be2b",
            "default_route_table_id": "rtb-0d87058297929703d",
            "default_security_group_id": "sg-06d2491ad35e33151",
            "dhcp_options_id": "dopt-04608d720940f7aa1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ab4290f3eb182b1f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d87058297929703d",
            "owner_id": "605427169049",
            "tags": {
              "Name": "Demo VPC"
            },
            "tags_all": {
              "Name": "Demo VPC"
            }
          }
        }
      ]
    }
  ]
}